Fixed bug of overlapping dropdowns
Changelog:
 - HTML: Added <li> parent to <button> and <div> with dropdown content
   in order to make position absolute work properly
 - CSS: Changed .navpanel li selector's display from inline to
   inline-block
 - JS: Changed a few things
   * Changed myFunction and myFunctionTwo to use query selector and
     unshow other dropdown if it's currently shown, added function that
     does this

--- a/css/general.css
+++ b/css/general.css
@@ -113,7 +113,7 @@ nav {
 }
 
 .navpanel li {
-    display: inline;
+    display: inline-block;
 }
 
 /* Dropdown */
